# ClientServerExchange

./: CMakeLists.txt  README.md
client/: client.cpp
common/: CMakeLists.txt  pre.h
common/god_object/: CMakeLists.txt  god_object.hpp
common/json/: CMakeLists.txt  json.hpp
common/registry/: CMakeLists.txt  registry.cpp  registry.h
server/: server.cpp
server/core/: CMakeLists.txt  core.cpp  core.h
server/core/algo/order/: order.cpp  order.h
server/core/algo/order_book/: order_book.cpp  order_book.h
server/core/user_info/: user_info.cpp  user_info.h
tests/: tests.cpp
